# dravr-embacle

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  homebrew.yml  release.yml
benches/: eviction_bench.rs
crates/embacle-copilot-sdk/: Cargo.toml
crates/embacle-mcp/: Cargo.toml  README.md
crates/embacle-mcp/src/: lib.rs  main.rs  state.rs
crates/embacle-mcp/src/runner/: multiplex.rs
crates/embacle-mcp/src/tools/: mod.rs  model.rs  multiplex.rs  prompt.rs  provider.rs
crates/embacle-mcp/src/transport/: http.rs
crates/embacle-server/: Cargo.toml  README.md
crates/embacle-server/src/: auth.rs  completions.rs  health.rs  lib.rs  main.rs  mcp_client.rs  models.rs  openai_types.rs  router.rs  state.rs  streaming.rs
crates/embacle-server/src/mcp/: handler.rs  mod.rs  protocol.rs  server.rs
crates/embacle-server/src/mcp/tools/: list_models.rs  mod.rs  prompt.rs
crates/embacle-server/src/runner/: multiplex.rs
crates/embacle-server/tests/: api_integration.rs  live_copilot.rs
docs/: web-ui.md
examples/: acp_model_smoke.rs  test_claude_e2e.rs  tmux_smoke.rs  web_login.rs  web_query.rs
include/: embacle.h
providers/: claude_web.toml
scripts/: install-ffi.sh  pre-push-validate.sh
scripts/web/: claude-web-login.sh  claude-web-query.sh
src/: agent.rs  agui.rs  auth.rs  cache.rs  capability_guard.rs  claude_code.rs  cli_common.rs  cline_cli.rs  codex_cli.rs  compat.rs  config.rs  config_file.rs  container.rs  continue_cli.rs  copilot.rs  copilot_headless.rs  copilot_headless_config.rs  copilot_models.rs  copilot_sdk_runner.rs  cursor_agent.rs  discovery.rs  factory.rs  fallback.rs  ffi.rs  gemini_cli.rs  goose_cli.rs  guardrail.rs  kilo_cli.rs  kiro_cli.rs  lib.rs  mcp_tool_bridge.rs  metrics.rs  openai_api.rs  opencode.rs  process.rs  prompt.rs  quality_gate.rs  sandbox.rs  structured_output.rs  tmux_runner.rs  (+6 more)
tests/: agui.rs  e2e.rs  scenario_tests.rs  tmux_session.rs
