# ABOUTME: Vendored fork of copilot-sdk-rust for crates.io publishing
# ABOUTME: Provides Rust SDK for GitHub Copilot CLI (JSON-RPC over stdio)

[package]
name = "embacle-copilot-sdk"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Vendored fork of copilot-sdk-rust — Rust SDK for GitHub Copilot CLI"
repository = "https://github.com/dravr-ai/dravr-embacle"
documentation = "https://docs.rs/embacle-copilot-sdk"
readme = "README.md"
keywords = ["copilot", "github", "ai", "sdk"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "copilot_sdk"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "process",
    "sync",
    "io-util",
    "macros",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
which = "7"
schemars = { version = "0.8", optional = true, features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
tempfile = "3"
futures = "0.3"
rand = "0.8"
serde_yaml = "0.9"

[features]
default = []
schemars = ["dep:schemars"]

[lints.rust]
unsafe_code = "deny"
