# ABOUTME: MCP server crate exposing embacle LLM runners via Model Context Protocol
# ABOUTME: Supports stdio and HTTP/SSE transports with provider, model, and multiplex tools
#
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 dravr.ai

[package]
name = "embacle-mcp"
version = "0.8.1"
edition = "2021"
license = "Apache-2.0"
description = "MCP server for embacle LLM runners — expose AI CLI tools via Model Context Protocol"
repository = "https://github.com/dravr-ai/dravr-embacle"
readme = "README.md"
keywords = ["mcp", "llm", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "embacle-mcp"
path = "src/main.rs"

[dependencies]
embacle = { path = "../..", version = "0.8.1" }
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow these clippy lints project-wide
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
redundant_pub_crate = "allow"
multiple_crate_versions = "allow"
