# ABOUTME: OpenAI-compatible REST API server exposing embacle LLM runners
# ABOUTME: Proxies chat completions to CLI tools via standard HTTP endpoints
#
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 dravr.ai

[package]
name = "embacle-server"
version = "0.14.2"
edition = "2021"
license = "Apache-2.0"
description = "Unified OpenAI-compatible REST API + MCP server for embacle LLM runners"
repository = "https://github.com/dravr-ai/dravr-embacle"
readme = "README.md"
keywords = ["openai", "llm", "mcp", "ai", "rest"]
categories = ["command-line-utilities", "web-programming::http-server"]

[lib]
name = "embacle_server"
path = "src/lib.rs"

[[bin]]
name = "embacle-server"
path = "src/main.rs"

[dependencies]
embacle = { path = "../..", version = "0.14.2", features = ["config-file", "copilot-headless", "otel"] }
embacle-mcp = { path = "../embacle-mcp", version = "0.14.2" }
dravr-tronc = { version = "0.2", features = ["notifications"] }
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry = "0.28"
opentelemetry_sdk = "0.28"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1.45", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
which = "7.0"

[lints]
workspace = true
